--- a/src/Pages/ActiveBrother.css
+++ b/src/Pages/ActiveBrother.css
@@ -209,6 +209,9 @@ body {
   position: relative;
   padding-left: 1.5rem;
   transition: color 0.3s ease, transform 0.3s ease;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
 .brother-list-item:hover {
