--- a/src/Components/FAQ.css
+++ b/src/Components/FAQ.css
@@ -16,7 +16,7 @@
   }
   
   .faq-container {
-    max-width: 900px;
+    max-width: 75rem;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -40,7 +40,7 @@
   }
   
   .faq-question {
-    font-size: 20px;
+    font-size: 1.5rem;
     font-weight: 600;
     cursor: pointer;
     display: flex;
