--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -160,11 +160,13 @@ html, body {
 }
 
 .info-content {
-  max-width: 800px;
+  max-width: 66%;
+  background-color: var(--bg-card);
+  padding: 2rem;
 }
 
 .info-content h2 {
-  font-size: 2.5rem;
+  font-size: 2rem;
   margin-bottom: 2rem;
   position: relative;
   display: inline-block;
