--- a/src/Pages/Careers.css
+++ b/src/Pages/Careers.css
@@ -39,7 +39,7 @@
 
 .careersmainTitle {
   font-size: 3rem;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Playfair Display';
   color: rgb(255, 255, 255);
   text-align: center;
   margin: 0;
