--- a/src/Pages/ActiveBrotherList.module.css
+++ b/src/Pages/ActiveBrotherList.module.css
@@ -13,7 +13,7 @@
 body {
   background-color: var(--bg-dark);
   color: var(--text-light);
-  font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Playfair Display';
 }
 
 .container {
