--- a/src/Pages/ExecutiveBoardList.module.css
+++ b/src/Pages/ExecutiveBoardList.module.css
@@ -13,7 +13,7 @@
 body {
   background-color: var(--bg-dark);
   color: var(--text-light);
-  font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Playfair Display';
 }
 
 .container {
@@ -178,7 +178,7 @@ body {
 }
 
 h2 {
-  font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Playfair Display';
   font-size: 2.5rem;
   font-weight: 700;
   color: var(--text-light);
