--- a/src/Pages/MeetUs.css
+++ b/src/Pages/MeetUs.css
@@ -14,7 +14,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Playfair Display';
   position: relative;
   overflow: hidden;
 }
