--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -161,7 +161,7 @@ html, body {
 
 .info-content {
   max-width: 66%;
-  background-color: var(--bg-card);
+  /* background-color: var(--bg-card); */
   padding: 2rem;
 }
 
