--- a/src/Pages/MeetUs.css
+++ b/src/Pages/MeetUs.css
@@ -9,8 +9,7 @@
 
 .pageContainer {
   padding-top: 80px;
-  background-color: var(--bg-dark);
-  color: var(--text-light);
+  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100"><rect width="100" height="100" fill="none" stroke="rgba(255,255,255,0.05)" stroke-width="1"/></svg>');  color: var(--text-light);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
